--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "dash>=3.0.4",
+    "jinja2>=3.1.0",
     "numpy>=2.0.0",
     "plotly>=6.1.2",
     "polars>=1.30.0",
