--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "typer>=0.16.0",
     "kaleido==0.2.1",
     "dash>=3.0.4",
+    "uvicorn>=0.34.3",
+    "starlette>=0.47.0",
 ]
 
 [project.scripts]
