--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,21 +10,17 @@ requires-python = ">=3.13"
 dependencies = [
     "jinja2>=3.1.0",
     "numpy>=2.0.0",
-    "plotly>=6.1.2",
     "polars>=1.30.0",
     "pydantic>=2.11.5",
     "ruamel-yaml>=0.18.12",
     "tqdm>=4.67.1",
     "typer>=0.16.0",
-    "kaleido==0.2.1",
-    "dash>=3.0.4",
     "uvicorn>=0.34.3",
     "starlette>=0.47.0",
 ]
 
 [project.scripts]
-cli = "src.cli:run_cli"
-c = "src.cli:run_cli"
+swash-gui = "src.cli:run_cli"
 
 [build-system]
 requires = ["hatchling"]
