Fix SWASH simulation issues with vegetation parameters
- Fix config property references (breakwater_start_position moved to numeric)
- Resolve NSTEMS parameter issue by using integer conversion in template
- Update vegetation plant density default from 100 to 10 (realistic value)
- Remove spatially varying vegetation in favor of constant density
- Add shorthand script alias 'swg' for swash-gui
- Maintain strict error checking for all SWASH warnings and errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
 
 [project.scripts]
 swash-gui = "src.cli:run_cli"
+swg = "src.cli:run_cli"
 
 [build-system]
 requires = ["hatchling"]
