--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "typer>=0.16.0",
     "uvicorn>=0.34.3",
     "starlette>=0.47.0",
+    "plotly>=6.1.2",
 ]
 
 [project.scripts]
