--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "uvicorn>=0.34.3",
     "starlette>=0.47.0",
     "plotly>=6.1.2",
+    "kaleido==0.2.1",
 ]
 
 [project.scripts]
