--- a/config/model001_with_breakwater.yml
+++ b/config/model001_with_breakwater.yml
@@ -1,4 +1,4 @@
-hash: bb8c8ea6  # hash of the config (automatically modified)
+hash: 2c5a17a8  # hash of the config (automatically modified)
 grid: # computational grid configuration
   hash: 44136fa3  # Hash of the configuration (automatically generated)
 water: # configuration for the water in the channel
@@ -8,8 +8,8 @@ water: # configuration for the water in the channel
   wave_height: 0.25 # Wave height for regular waves (m)
   wave_period: 8.0 # Wave period for regular waves (s)
 breakwater: # breakwater configuration
-  hash: da4565b0  # Hash of the configuration (automatically generated)
-  enable: false # Enable breakwater in the simulation
+  hash: 660ea90b  # Hash of the configuration (automatically generated)
+  enable: true # Enable breakwater in the simulation
   crest_height: 0.9167 # Height of the crest from the floor (m)
   crest_width: 1.3761 # Width of the crest (m)
   slope: 1.75 # Slope of the breakwater sides (H:V ratio)
