--- a/config/model001_with_breakwater.yml
+++ b/config/model001_with_breakwater.yml
@@ -1,4 +1,4 @@
-hash: 2c5a17a8  # hash of the config (automatically modified)
+hash: cc57f58c  # hash of the config (automatically modified)
 grid: # computational grid configuration
   hash: 44136fa3  # Hash of the configuration (automatically generated)
 water: # configuration for the water in the channel
@@ -17,6 +17,17 @@ breakwater: # breakwater configuration
   stone_density: 2700.0 # Density of the stones (kg/m^3)
   armour_dn50: 0.3931 # Median diameter of armour stones (m)
   breakwater_start_position: 70.0 # Start position of the breakwater (m)
+vegetation: # configuration for the vegetation on the breakwater
+  hash: 2a08a8ae  # Hash of the configuration (automatically generated)
+  enable: false # Enable vegetation on the breakwater crest
+  type: # Primary vegetation type
+    plant_height: 0.5
+    plant_diameter: 0.02
+    plant_density: 50.0
+    drag_coefficient: 1.2
+  other_type: # Optional second vegetation type
+  distribution: half # Distribution pattern: 'half' (seaward/leeward), 'alternating', or 'custom'
+  type_fraction: 0.5 # Fraction of crest width occupied by primary vegetation type (0-1)
 numeric: # configuration for the numerical parameters
   hash: '77339272'  # Hash of the configuration (automatically generated)
   n_waves: 100 # Number of waves to simulate
