Rename crest_width to crest_length throughout codebase
- Update field name from crest_width to crest_length in config models
- Change UI labels from 'Crest Width' to 'Crest Length' in dashboard
- Update all references in JavaScript components and views
- Modify SWASH input template to use new field name
- Update all YAML configuration files
- Update documentation and README

--- a/config/dev.yml
+++ b/config/dev.yml
@@ -1,4 +1,4 @@
-hash: 3c9618ce  # hash of the config (automatically modified)
+hash: d43a0bde  # hash of the config (automatically modified)
 grid: # computational grid configuration
   hash: 44136fa3  # Hash of the configuration (automatically generated)
 water: # configuration for the water in the channel
@@ -8,10 +8,10 @@ water: # configuration for the water in the channel
   wave_height: 0.6 # Wave height for regular waves (m)
   wave_period: 5.0 # Wave period for regular waves (s)
 breakwater: # breakwater configuration
-  hash: bfa65295  # Hash of the configuration (automatically generated)
+  hash: 33bd44c8  # Hash of the configuration (automatically generated)
   enable: true # Enable breakwater in the simulation
   crest_height: 2.0 # Height of the crest from the floor (m)
-  crest_width: 2.0 # Width of the crest (m)
+  crest_length: 2.0 # Length of the crest (m)
   slope: 2.0 # Slope of the breakwater sides (H:V ratio)
   porosity: 0.4 # Porosity of the breakwater (0-1)
   stone_density: 2600.0 # Density of the stones (kg/m^3)
