--- a/config/model001_with_breakwater_and_vegetation.yml
+++ b/config/model001_with_breakwater_and_vegetation.yml
@@ -1,4 +1,4 @@
-hash: 5031d0f1  # hash of the config (automatically modified)
+hash: 8e6020f0  # hash of the config (automatically modified)
 grid: # computational grid configuration
   hash: 44136fa3  # Hash of the configuration (automatically generated)
 water: # configuration for the water in the channel
@@ -8,10 +8,10 @@ water: # configuration for the water in the channel
   wave_height: 0.25 # Wave height for regular waves (m)
   wave_period: 8.0 # Wave period for regular waves (s)
 breakwater: # breakwater configuration
-  hash: 660ea90b  # Hash of the configuration (automatically generated)
+  hash: 1ca65cbe  # Hash of the configuration (automatically generated)
   enable: true # Enable breakwater in the simulation
   crest_height: 0.9167 # Height of the crest from the floor (m)
-  crest_width: 1.3761 # Width of the crest (m)
+  crest_length: 1.3761 # Length of the crest (m)
   slope: 1.75 # Slope of the breakwater sides (H:V ratio)
   porosity: 0.4 # Porosity of the breakwater (0-1)
   stone_density: 2700.0 # Density of the stones (kg/m^3)
