--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ packages = [
 [dependency-groups]
 dev = [
     "black>=25.1.0",
+    "httpx>=0.28.1",
     "isort>=6.0.1",
     "pytest>=8.4.0",
     "pytest-asyncio>=1.0.0",
